msm8998-common: Xiaomi parts: Add dirac entry

--- a/parts/res/values-zh-rCN/strings.xml
+++ b/parts/res/values-zh-rCN/strings.xml
@@ -65,4 +65,7 @@
     <string name="seekbar_no_default_value">未设置任何默认选项</string>
     <string name="seekbar_default_value_set">设定预设值为<xliff:g id="number">%d</xliff:g></string>
     <string name="seekbar_default_value_already_set">已设置默认值</string>
+
+    <!-- Mi Sound -->
+    <string name="sound_title">声音</string>
 </resources>
